# cloud-builders

gcs-fetcher/: BUILD  cloudbuild.yaml
gcs-fetcher/cmd/gcs-fetcher/: BUILD.bazel  main.go
gcs-fetcher/cmd/upload-manifest/: BUILD.bazel  main.go
gcs-fetcher/pkg/fetcher/: BUILD.bazel  fetcher.go
gcs-fetcher/pkg/uploader/: uploader.go
