load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/cloud-builders/gcs-fetcher/cmd/upload-manifest",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/uploader:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":upload-manifest",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "upload-manifest",
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/cloud-builders/gcs-fetcher/cmd/upload-manifest",
    visibility = ["//visibility:public"],
)
